utf-8 в настройках, ini файл настроек, fix

--- a/img.qrc
+++ b/img.qrc
@@ -1,8 +1,7 @@
 <RCC>
     <qresource prefix="/img">
-        <file alias="mamont">img/mamont.png</file>
         <file alias="logo">img/logo.png</file>
-        <file alias="school2">img/school2.jpg</file>
+        <file alias="background">img/background.jpg</file>
         <file>img/next.png</file>
         <file>img/previos.png</file>
         <file>img/previos_push.png</file>
